[package]
name = "orderbyte"
version = "0.0.2"
# I am not including the original author here, as I can't assume that they want to
# be associated with this fork. However, please reach out if you would want your
# name to be included here, and I will happily do so.
authors = ["Adrian Covaci <6562353+acovaci@users.noreply.github.com>"]
description = "Library for reading/writing numbers in big-endian and little-endian."
documentation = "https://docs.rs/orderbyte"
homepage = "https://github.com/acovaci/orderbyte"
repository = "https://github.com/acovaci/orderbyte"
readme = "README.md"
categories = ["encoding", "parsing", "no-std"]
keywords = ["byte", "endian", "big-endian", "little-endian", "byteorder"]
license = "MIT"
edition = "2021"
rust-version = "1.83"

[lib]
name = "orderbyte"
bench = false

[dev-dependencies]
quickcheck = { version = "0.9.2", default-features = false }
rand = "0.7"

[features]
default = ["std"]
std = []

[profile.bench]
opt-level = 3
